fix #13: hero image alignment fixed

--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -13,6 +13,9 @@
 .hero__img {
   position: relative;
   z-index: 9;
+  display: flex;
+  /* border: 2px solid red; */
+  justify-content: flex-end;
 }
 
 .hero__img img {
@@ -144,5 +147,9 @@
   }
   .hero__experience {
     display: none !important;
+  }
+
+  .hero__img {
+    justify-content: center;
   }
 }
